# awesome

./: CMakeLists.txt  README.md  libawesome.pc.in
config/: awesome.yaml
include/awesome/: button.h  client.h  compositor.h  connection.h  cursor.h  display.h  displaydriver.h  displayserver.h  event.h  interface.h  protocol.h  types.h  window.h
include/awesome/displaydrivers/: sdl.h
include/awesome/interfaces/: frontier.h
src/ads/: button.cpp  client.cpp  compositor.cpp  cursor.cpp  display.cpp  displaydriver.cpp  displayserver.cpp  interface.cpp  main.cpp  window.cpp
src/ads-test/: main.cpp
src/ads/drivers/: opengl.cpp  opengl.h
src/ads/drivers/linuxdrm/: linuxdrm.cpp  linuxdrm.h
src/ads/drivers/sdl/: sdl.cpp  sdl.h
src/ads/interfaces/awesome/: awesome.cpp  awesome.h  client.cpp
src/ads/interfaces/frontier/: frontier.cpp
src/awesome-desktop/: main.cpp
src/libawesome/: connection.cpp  connthread.cpp
